--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html, body {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: hsl(161, 60%, 42%);
 }
 
 main {
